--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "formik": "^2.2.6",
     "gatsby": "^3.0.3",
     "gatsby-plugin-emotion": "^6.0.0",
     "gatsby-theme-codebushi": "^1.0.0",
     "react": "^17.0.1",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^17.0.1",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "eslint": "^7.21.0",
